--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,13 @@
 	border-radius: 6px;
 }
 
+#controls
+{
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+}
+
 .row
 {
 	display: flex;
