--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,11 @@
 .container
 {
-	width: 700px;
 	border: 1px solid #ddd;
 	margin: 0 auto;
 	padding: 16px;
 	border-radius: 6px;
+	width: auto;
+	height: 500px;
 }
 
 #controls
@@ -12,6 +13,12 @@
 	display: flex;
 	justify-content: center;
 	margin-top: 20px;
+
+	button
+	{
+		padding: 10px 16px;
+		margin: 0 5px;
+	}
 }
 
 .row
@@ -21,13 +28,14 @@
 
 	.cell
 	{
-	 	border: 1px solid #ddd;
+	 	border: 1px solid #dfdfdf;
 	 	margin: 0;
-	 	padding: 10px;
+	 	padding: 4px;
+ 		background: #fff;
 
 	 	&.active
 	 	{
-	 		background: red;
+	 		background-color: #00b527;
 	 	}
 	}
 }
